Fixed some layout issues, still in progress

--- a/browser/scss/lobby/main.scss
+++ b/browser/scss/lobby/main.scss
@@ -1,11 +1,12 @@
 #lobby {
 	h1 {
-		margin-top: 40px;
+		// margin-top: 40px;
 		text-align: center;
+		margin: 0;
 	}
 	
 	h3 {
-		margin-top: 40px;
+		// margin-top: 40px;
 		text-align: center;
 	}
 
