--- a/browser/scss/room/main.scss
+++ b/browser/scss/room/main.scss
@@ -1,7 +1,7 @@
 #room {
 	
 	h1 {
-		margin-top: 40px;
+		// margin-top: 40px;
 		text-align: center;
 	}
 
@@ -23,4 +23,17 @@
 			padding: 5px;
 		}
 	}
+
+	.row:nth-child(1) {
+		height: 50vh;
+	}
+
+	.row:nth-child(2) {
+		height: 25vh;
+	}
+
+	.row:nth-child(3) {
+		height: 25vh;
+	}
+
 }
